var global and include dinamic

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -35,6 +35,9 @@ framework:
 twig:
     debug:            "%kernel.debug%"
     strict_variables: "%kernel.debug%"
+    globals:
+        global:
+            author: 'Juan Luis García Borrego'
 
 # Assetic Configuration
 assetic:
